--- a/resources/public/css/bracket.css
+++ b/resources/public/css/bracket.css
@@ -261,6 +261,9 @@ table.gridtable td.title {
     left: 0;
     right: 0;
     padding: 0 4px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 #bracket .match .slot1 {
     top: 0px;
@@ -276,6 +279,7 @@ table.gridtable td.title {
 #bracket .match .seed {
     color: #777;
     font-size: 10px;
+    padding-right: 2px;
 }
 #bracket .match .winner, #bracket .match .winner em {
     font-weight: bold;
