--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -22,6 +22,7 @@
 </div>
 
 <script src="//code.jquery.com/jquery-2.1.1.min.js" type="text/javascript"></script>
+<script src="//code.createjs.com/easeljs-0.8.0.min.js" type="text/javascript"></script>
 
 <div class="container">
     {% block content %}
