--- a/resources/templates/bracket.html
+++ b/resources/templates/bracket.html
@@ -1,696 +1,10 @@
 {% extends "templates/base.html" %}
 {% block content %}
-{% style "/css/bracket.css" %}
 {% script "/js/bracket.js" %}
-<body class="bracket standings light-blue">
-<div id="content-wrapper">
-<div id="table">
-
-    <!-- Table Dates -->
-    <table class="gridtable">
-        <tr>
-            <th class="round_1"> 1st ROUND </th>
-            <th class="round_2"> 2nd ROUND </th>
-            <th class="round_3"> SWEET 16 </th>
-            <th class="round_4"> ELITE EIGHT </th>
-            <th class="round_5"> FINAL FOUR </th>
-            <th class="round_6"> CHAMPION </th>
-            <th class="round_5"> FINAL FOUR </th>
-            <th class="round_4"> ELITE EIGHT </th>
-            <th class="round_3"> SWEET 16 </th>
-            <th class="round_2"> 2nd ROUND </th>
-            <th class="round_1"> 1st ROUND </th>
-        </tr>
-    </table>
-</div>
-
-<!-- Bracket -->
-<div id="bracket">
-<div id="round1" class="round">
-<!-- start region1 -->
-<div class="region region1">
-    <h4 class="region1 first_region">
-        SOUTH
-    </h4>
-    <div id="match18" class="match m1">
-        <p class="slot slot1">
-            <span class="seed">1</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">16</span>
-        </p>
-    </div>
-
-    <!-- /#match18 -->
-    <div id="match19" class="match m2">
-        <p class="slot slot1">
-            <span class="seed">8</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">9</span>
-        </p>
-    </div>
-
-    <!-- /#match19 -->
-    <div id="match20" class="match m3">
-        <p class="slot slot1">
-            <span class="seed">5</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">12</span>
-        </p>
-    </div>
-
-    <!-- /#match20 -->
-    <div id="match21" class="match m4">
-        <p class="slot slot1">
-            <span class="seed">4</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">13</span>
-        </p>
-    </div>
-
-    <!-- /#match21 -->
-    <div id="match22" class="match m5">
-        <p class="slot slot1">
-            <span class="seed">6</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">11</span>
-        </p>
-    </div>
-    <div id="match23" class="match m6">
-        <p class="slot slot1">
-            <span class="seed">3</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">14</span>
-        </p>
-    </div>
-
-    <!-- /#match23 -->
-    <div id="match24" class="match m7">
-        <p class="slot slot1">
-            <span class="seed">7</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">10</span>
-        </p>
-    </div>
-
-    <!-- /#match24 -->
-    <div id="match25" class="match m8">
-        <p class="slot slot1">
-            <span class="seed">2</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">15</span>
-        </p>
-    </div>
-
-    <!-- /#match25 -->
-</div>
-<!-- /.region1 -->
-<!-- start region2 -->
-<div class="region region2">
-    <h4 class="region2 first_region">
-        EAST
-    </h4>
-    <div id="match26" class="match m1">
-        <p class="slot slot1">
-            <span class="seed">1</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">16</span>
-        </p>
-    </div>
-
-    <!-- /#match26 -->
-    <div id="match27" class="match m2">
-        <p class="slot slot1">
-            <span class="seed">8</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">9</span>
-        </p>
-    </div>
-
-    <!-- #/match27 -->
-    <div id="match28" class="match m3">
-        <p class="slot slot1">
-            <span class="seed">5</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">12</span>
-        </p>
-    </div>
-
-    <!-- #/match28 -->
-    <div id="match29" class="match m4">
-        <p class="slot slot1">
-            <span class="seed">4</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">13</span>
-        </p>
-    </div>
-
-    <!-- #/match29 -->
-    <div id="match30" class="match m5">
-        <p class="slot slot1">
-            <span class="seed">6</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">11</span>
-        </p>
-    </div>
-
-    <!-- /#match30 -->
-    <div id="match31" class="match m6">
-        <p class="slot slot1">
-            <span class="seed">3</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">14</span>
-        </p>
-    </div>
-
-    <!--/#match31-->
-    <div id="match32" class="match m7">
-        <p class="slot slot1">
-            <span class="seed">7</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">10</span>
-        </p>
-    </div>
-
-    <!--/#match32-->
-    <div id="match33" class="match m8">
-        <p class="slot slot1">
-            <span class="seed">2</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">15</span>
-        </p>
-    </div>
-
-    <!-- /#match33 -->
-</div>
-<!-- /.region2 -->
-<!-- start region3 -->
-<div class="region region3">
-    <h4 class="region3 first_region">
-        WEST
-    </h4>
-    <div id="match65" class="match m1">
-        <p class="slot slot1">
-            <span class="seed">1</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">16</span>
-        </p>
-    </div>
-
-    <!--#/match65-->
-    <div id="match66" class="match m2">
-        <p class="slot slot1">
-            <span class="seed">8</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">9</span>
-        </p>
-    </div>
-
-    <!-- #/match66 -->
-    <div id="match4" class="match m3">
-        <p class="slot slot1">
-            <span class="seed">5</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">12</span>
-        </p>
-    </div>
-
-    <!--/#match4 -->
-    <div id="match5" class="match m4">
-        <p class="slot slot1">
-            <span class="seed">4</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">13</span>
-        </p>
-    </div>
-
-    <!-- /#match5 -->
-    <div id="match6" class="match m5">
-        <p class="slot slot1">
-            <span class="seed">6</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">11</span>
-        </p>
-    </div>
-
-    <!-- /#match6 -->
-    <div id="match7" class="match m6">
-        <p class="slot slot1">
-            <span class="seed">3</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">14</span>
-        </p>
-    </div>
-
-    <!-- /#match7 -->
-    <div id="match8" class="match m7">
-        <p class="slot slot1">
-            <span class="seed">7</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">10</span>
-        </p>
-    </div>
-
-    <!-- /#match8 -->
-    <div id="match9" class="match m8">
-        <p class="slot slot1">
-            <span class="seed">2</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">15</span>
-        </p>
-    </div>
-
-    <!-- /#match9 -->
-</div>
-<!-- /.region3 -->
-<!-- start region4 -->
-<div class="region region4">
-    <h4 class="region4 first_region">
-        MIDWEST
-    </h4>
-    <div id="match10" class="match m1">
-        <p class="slot slot1">
-            <span class="seed">1</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">16</span>
-        </p>
-    </div>
-
-    <!-- /#match10 -->
-    <div id="match11" class="match m2">
-        <p class="slot slot1">
-            <span class="seed">8</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">9</span>
-        </p>
-    </div>
-
-    <!-- /#match11 -->
-    <div id="match12" class="match m3">
-        <p class="slot slot1">
-            <span class="seed">5</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">12</span>
-        </p>
-    </div>
-
-    <!-- /#match12 -->
-    <div id="match13" class="match m4">
-        <p class="slot slot1">
-            <span class="seed">4</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">13</span>
-        </p>
-    </div>
-
-    <!-- /#match13 -->
-    <div id="match14" class="match m5">
-        <p class="slot slot1">
-            <span class="seed">6</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">11</span>
-        </p>
-    </div>
-
-    <!-- /#match14 -->
-    <div id="match15" class="match m6">
-        <p class="slot slot1">
-            <span class="seed">3</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">14</span>
-        </p>
-    </div>
-    <div id="match16" class="match m7">
-        <p class="slot slot1">
-            <span class="seed">7</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">10</span>
-        </p>
-    </div>
-
-    <!-- /#match16 -->
-    <div id="match17" class="match m8">
-        <p class="slot slot1">
-            <span class="seed">2</span>
-        </p>
-        <p class="slot slot2">
-            <span class="seed">15</span>
-        </p>
-    </div>
-
-    <!-- /#match17 -->
-</div>
-<!-- /.region4 -->
-</div>
-<!-- /#round1 -->
-<div id="round2" class="round">
-    <div class="region region1">
-        <h4 class="region1">
-            MIDWEST
-        </h4>
-        <div id="match41" class="match m1">
-            <p rel="match18" class="slot slot1">
-            </p>
-            <p rel="match19" class="slot slot2">
-            </p>
-        </div>
-
-        <!-- /#match41 -->
-        <div id="match42" class="match m2">
-            <p rel="match20" class="slot slot1">
-            </p>
-            <p rel="match21" class="slot slot2">
-            </p>
-        </div>
-        <!-- /#match42 -->
-        <div id="match43" class="match m3">
-            <p class="slot slot1">
-            </p>
-            <p class="slot slot2">
-            </p>
-        </div>
-        <!-- /#match43 -->
-        <div id="match44" class="match m4">
-            <p class="slot slot1">
-            </p>
-            <p class="slot slot2">
-            </p>
-        </div>
-        <!-- /#match44 -->
-    </div>
-    <!-- /.region1 -->
-    <div class="region region2">
-        <h4 class="region2">
-            WEST
-        </h4>
-        <div id="match45" class="match m1">
-            <p class="slot slot1">
-            </p>
-            <p class="slot slot2">
-            </p>
-        </div>
-        <div id="match46" class="match m2">
-            <p class="slot slot1">
-            </p>
-            <p class="slot slot2">
-            </p>
-        </div>
-
-        <!-- /#match46 -->
-        <div id="match47" class="match m3">
-            <p class="slot slot1">
-            </p>
-            <p class="slot slot2">
-            </p>
-        </div>
-        <div id="match48" class="match m4">
-            <p class="slot slot1">
-            </p>
-            <p class="slot slot2">
-            </p>
-        </div>
-        <!-- /#match48 -->
-    </div>
-    <div class="region region3">
-        <h4 class="region3">
-            East
-        </h4>
-        <div id="match3" class="match m1">
-            <p class="slot slot1">
-            </p>
-            <p class="slot slot2">
-            </p>
-        </div>
-
-        <!--/match3-->
-        <div id="match34" class="match m2">
-            <p class="slot slot1">
-            </p>
-            <p class="slot slot2">
-            </p>
-        </div>
-        <!-- #/match34 -->
-        <div id="match35" class="match m3">
-            <p class="slot slot1">
-            </p>
-            <p class="slot slot2">
-            </p>
-        </div>
-        <!-- #/match35 -->
-        <div id="match36" class="match m4">
-            <p class="slot slot1">
-            </p>
-            <p class="slot slot2">
-            </p>
-        </div>
-        <!-- #/match36 -->
-    </div>
-    <!--/.region3-->
-    <div class="region region4">
-        <h4 class="region4">
-            South
-        </h4>
-        <div id="match37" class="match m1">
-            <p class="slot slot1">
-            </p>
-            <p class="slot slot2">
-            </p>
-        </div>
-
-        <!--/#match37-->
-        <div id="match38" class="match m2">
-            <p class="slot slot1">
-            </p>
-            <p class="slot slot2">
-            </p>
-        </div>
-        <!--/#match38-->
-        <div id="match39" class="match m3">
-            <p class="slot slot1">
-            </p>
-            <p class="slot slot2">
-            </p>
-        </div>
-        <!--/#match39-->
-        <div id="match40" class="match m4">
-            <p class="slot slot1">
-            </p>
-            <p class="slot slot2">
-            </p>
-        </div>
-        <!--/#match40-->
-    </div>
-    <!--/.region4-->
-</div>
-<div id="round3" class="round">
-    <div class="region region1">
-        <h4 class="region1">
-            Midwest
-        </h4>
-        <div id="match53" class="match m1">
-            <p class="slot slot1">
-            </p>
-            <p class="slot slot2">
-            </p>
-        </div>
-        <div id="match54" class="match m2">
-            <p class="slot slot1">
-            </p>
-            <p class="slot slot2">
-            </p>
-        </div>
-    </div>
-
-    <!-- /.region1 -->
-    <div class="region region2">
-        <h4 class="region2">
-            West
-        </h4>
-        <div id="match55" class="match m1">
-            <p class="slot slot1">
-            </p>
-            <p class="slot slot2">
-            </p>
-        </div>
-        <div id="match56" class="match m2">
-            <p class="slot slot1">
-            </p>
-            <p class="slot slot2">
-            </p>
-        </div>
-
-        <!--/#match56-->
-    </div>
-    <div class="region region3">
-        <h4 class="region3">
-            East
-        </h4>
-        <div id="match49" class="match m1">
-            <p class="slot slot1">
-            </p>
-            <p class="slot slot2">
-            </p>
-        </div>
-
-        <!--/#match49-->
-        <div id="match50" class="match m2">
-            <p class="slot slot1">
-            </p>
-            <p class="slot slot2">
-            </p>
-        </div>
-        <!--/#match50-->
-    </div>
-    <!-- /.region3 -->
-    <div class="region region4">
-        <h4 class="region4">
-            South
-        </h4>
-        <div id="match51" class="match m1">
-            <p class="slot slot1">
-            </p>
-            <p class="slot slot2">
-            </p>
-        </div>
-
-        <!--/#match51-->
-        <div id="match52" class="match m2">
-            <p class="slot slot1">
-            </p>
-            <p class="slot slot2">
-            </p>
-        </div>
-        <!--/#match52-->
-    </div>
-    <!-- /.region4 -->
-</div>
-<div id="round4" class="round">
-    <div class="region region1">
-        <h4 class="region1">
-            Midwest
-        </h4>
-        <div id="match60" class="match m1">
-            <p class="slot slot1">
-            </p>
-            <p class="slot slot2">
-            </p>
-        </div>
-
-        <!-- /#match60 -->
-    </div>
-    <!-- /.region1 -->
-    <div class="region region2">
-        <h4 class="region2">
-            West
-        </h4>
-        <div id="match61" class="match m1">
-            <p class="slot slot1">
-            </p>
-            <p class="slot slot2">
-            </p>
-        </div>
-
-        <!-- /#match61 -->
-    </div>
-    <!-- /.region2 -->
-    <div class="region region3">
-        <h4 class="region3">
-            East
-        </h4>
-        <div id="match58" class="match m1">
-            <p class="slot slot1">
-            </p>
-            <p class="slot slot2">
-            </p>
-        </div>
-
-        <!-- /#match58 -->
-    </div>
-    <!--/.region3-->
-    <div class="region region4">
-        <h4 class="region4">
-            South
-        </h4>
-        <div id="match59" class="match m1">
-            <p class="slot slot1">
-            </p>
-            <p class="slot slot2">
-            </p>
-        </div>
-
-        <!--/#match59-->
-    </div>
-    <!--/#match59-->
-</div>
-<div id="round5" class="round">
-
-    <div class="region">
-        <div id="match63" class="match m1">
-            <p class="slot slot1">
-            </p>
-            <p class="slot slot2">
-            </p>
-        </div>
-        <div id="match62" class="match m2">
-            <p class="slot slot1">
-            </p>
-            <p class="slot slot2">
-            </p>
-        </div>
-    </div>
-</div>
-<div id="round6" class="round">
-    <div class="region">
-        <div id="match64" class="match m1">
-            <p class="slot slot1" id="slot127">
-
-                <!-- winner -->
-            </p>
-            <p class="slot slot2" id="slot128">
-
-                <!-- loser -->
-            </p>
-        </div>
-    </div>
-</div>
-</div>
-</div>
-</body>
-<script type="text/javascript">
-    var teams = ["Florida", "Kansas", "Syracuse", "UCLA",
-        "VCU", "Ohio St.", "New Mexico", "Colorado",
-        "Pittsburgh", "Stanford", "Dayton", "Stephen F. Austin",
-        "Tulsa", "Western Michigan", "Eastern Kentucky", "Albany"];
-    initializeRegion($("#round1 > .region.region1"), teams);
+<canvas id="bracket-canvas" width="500" height="300"></canvas>
+{% endblock %}
+{% block page-scripts %}
+<script>
+    init();
 </script>
 {% endblock %}
