--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -22,9 +22,8 @@
 </div>
 
 <script src="//code.jquery.com/jquery-2.1.1.min.js" type="text/javascript"></script>
-<script src="//code.createjs.com/easeljs-0.8.0.min.js" type="text/javascript"></script>
 
-<div class="container">
+<div id="content" class="container">
     {% block content %}
     {% endblock %}
 </div>
