centered table with rounded values

--- a/resources/templates/bracket.html
+++ b/resources/templates/bracket.html
@@ -1,6 +1,7 @@
 {% extends "templates/base.html" %}
 {% block content %}
 {% script "/js/bracket.js" %}
+{% style "/css/bracket.css" %}
 {% endblock %}
 {% block page-scripts %}
 <script>
