--- a/resources/templates/bracket.html
+++ b/resources/templates/bracket.html
@@ -1,10 +1,33 @@
 {% extends "templates/base.html" %}
 {% block content %}
+<form class="form" id="round-info">
+    <label for="round-pts">Round points</label>
+    <div class="form-group" id="round-pts">
+        <input id="round1-pts" placeholder="Round 1 points" type="number" value="1"/>
+        <input id="round2-pts" placeholder="Round 2 points" type="number" value="2"/>
+        <input id="round3-pts" placeholder="Round 3 points" type="number" value="3"/>
+        <input id="round4-pts" placeholder="Round 4 points" type="number" value="4"/>
+        <input id="round5-pts" placeholder="Round 5 points" type="number" value="5"/>
+        <input id="round6-pts" placeholder="Round 6 points" type="number" value="6"/>
+    </div>
+    <label for="upset-pts">Upset points</label>
+    <div class="form-group" id="upset-pts">
+        <input id="round1-upset-pts" placeholder="Round 1 upset" type="number" value="1"/>
+        <input id="round2-upset-pts" placeholder="Round 2 upset" type="number" value="2"/>
+        <input id="round3-upset-pts" placeholder="Round 3 upset" type="number" value="3"/>
+        <input id="round4-upset-pts" placeholder="Round 4 upset" type="number" value="4"/>
+        <input id="round5-upset-pts" placeholder="Round 5 upset" type="number" value="5"/>
+        <input id="round6-upset-pts" placeholder="Round 6 upset" type="number" value="6"/>
+    </div>
+    <div id="submit" class="btn btn-default">Submit</div>
+</form>
+<div id="bracket"/>
 {% script "/js/bracket.js" %}
 {% style "/css/bracket.css" %}
 {% endblock %}
 {% block page-scripts %}
 <script>
-    init("#content")
+    //init("#bracket");
+    $('#submit').click({pts: "#round-pts", upset: "#upset-pts"}, submitBracket);
 </script>
 {% endblock %}
