pretty much working?

--- a/resources/templates/bracket.html
+++ b/resources/templates/bracket.html
@@ -28,6 +28,6 @@
 {% block page-scripts %}
 <script>
     //init("#bracket");
-    $('#submit').click({pts: "#round-pts", upset: "#upset-pts"}, submitBracket);
+    $('#submit').click({pts: "#round-pts", upset: "#upset-pts", container: "#bracket"}, submitBracket);
 </script>
 {% endblock %}
